# coursera-ml

./: CMakeLists.txt  LICENSE  README.md  new-ex.sh
ex1/: CMakeLists.txt  computeCost.cpp  computeCost.hpp  computeCost_main.cpp  featureNormalize.cpp  featureNormalize.hpp  featureNormalize_main.cpp  gradientDescent.cpp  gradientDescent.hpp  gradientDescent_main.cpp  normalEqn.cpp  normalEqn.hpp  normalEqn_main.cpp  plotData.cpp  plotData.hpp  plotData_main.cpp  util.hpp  warmUpExercise.cpp  warmUpExercise.hpp  warmUpExercise_main.cpp
ex1_mlpack/: CMakeLists.txt  predictHousePrice.cpp  predictHousePrice.hpp  predictHousePrice_main.cpp
tests/ex1/: CMakeLists.txt  computeCostMulti_main.cpp  computeCost_main.cpp  featureNormalize_main.cpp  gradientDescentMulti_main.cpp  gradientDescent_main.cpp  normalEqn_main.cpp  plotData_main.cpp  util_test.cpp  warmUpExercise_main.cpp
tests/ex1_mlpack/: CMakeLists.txt  predictHousePrice_main.cpp
